<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_your_score"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:backgroundTint="@color/colorAccent"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
            android:hint="@string/enter_your_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_OK"
        android:text="@string/ok"
        android:textSize="20sp"
        android:layout_margin="16dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/til_name"
        app:layout_constraintTop_toBottomOf="@+id/til_name" />

    <TextView
        android:id="@+id/textView_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="48dp"
        android:textSize="20dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/textView_OK"
        app:layout_constraintEnd_toStartOf="@+id/textView_OK" />
</androidx.constraintlayout.widget.ConstraintLayout>